# evolvetool-bench

./: .ai_agent_credentials.json  .gitignore  README.md  generate_figures.py  pyproject.toml  results_arise_s1.json  results_arise_s1_v2.json  results_noevol_s1.json  run_all.py  run_benchmark.py  run_full_matrix.py  run_remaining.sh  run_with_quality.py
paper/: arxiv.tex  llm4se_submission.tex  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/submission/: main.tex
results/: aggregate_arise.json  aggregate_no-evolution.json  s1_arise.json  s1_no-evolution.json  s2_arise.json  s3_arise.json  s3_no-evolution.json  s4_arise.json  s4_no-evolution.json  s5_arise.json  s5_no-evolution.json
results_domB/: aggregate_arise.json  s1_arise.json
results_ft1/: aggregate_arise.json  s1_arise.json  s4_arise.json  s5_arise.json
results_ft1_v2/: aggregate_arise.json  s1_arise.json  s3_arise.json  s4_arise.json
results_full/arise_haiku/: aggregate.json  s1.json  s2.json  s3.json  s4.json  s5.json  s6.json  s7.json  s8.json  s9.json
results_full/arise_sonnet/: aggregate.json  s1.json  s3.json  s4.json  s5.json  s6.json  s7.json  s8.json  s9.json
results_full/evoskill_sonnet/: aggregate.json  s1.json  s3.json  s4.json  s5.json  s6.json  s7.json  s8.json
results_full/no-evolution_haiku/: aggregate.json  s1.json  s2.json  s3.json  s4.json  s5.json  (+3 more)
results_judge/: aggregate_arise.json  s1_arise.json  s3_arise.json  s4_arise.json  s5_arise.json
results_quality/: aggregate.json  s1.json  s2.json  s3.json  s4.json  s5.json  s6.json
tests/: test_types.py
(+41 files in other folders)
